create UserTable component

--- a/src/styles/components/_user.scss
+++ b/src/styles/components/_user.scss
@@ -1,3 +1,8 @@
+.grid_1columns {
+    display: grid;
+    grid-template-columns: auto;
+}
+
 .grid_2columns {
     margin: 1.5rem;
     display: grid;
@@ -7,17 +12,7 @@
 .grid_3columns {
     margin: 1.5rem;
     display: grid;
-    grid-template-columns: auto auto auto;
-}
-
-.grid_rows {
-    text-align: center;
-    display: grid;
-    grid-template-rows: auto auto auto;
-}
-
-.card {
-    margin: 5rem;
+    grid-template-columns: 20% 20% 60%;
 }
 
 .user_image {
@@ -27,4 +22,10 @@
 
 .bold_text {
     font-weight: bold;
+}
+
+.table {
+    width: 100%;
+    margin: 1rem 0 1rem 1rem; 
+    overflow: auto;
 }
