--- a/src/styles/components/_user.scss
+++ b/src/styles/components/_user.scss
@@ -29,3 +29,9 @@
     margin: 1rem 0 1rem 1rem; 
     overflow: auto;
 }
+
+.card {
+    display: inline;
+    margin: 1rem 1rem 1rem 1.2rem;
+    overflow: auto;
+}
