--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,1 +1,38 @@
-@import './components/user';
+.grid_1columns {
+    display: grid;
+    grid-template-columns: auto;
+}
+
+.grid_2columns {
+    margin: 1.5rem;
+    display: grid;
+    grid-template-columns: auto auto;
+    overflow: auto;
+}
+
+.grid_3columns {
+    margin: 1.5rem;
+    display: grid;
+    grid-template-columns: 15% 25% 60%;
+}
+
+.user_image {
+    width: 80px;
+    height: 80px;
+}
+
+.bold_text {
+    font-weight: bold;
+}
+
+.table {
+    width: 100%;
+    margin: 1rem 0 1rem 1rem; 
+    overflow: auto;
+}
+
+.card {
+    display: inline;
+    margin: 1rem 1rem 1rem 1.2rem;
+    overflow: auto;
+}
